# rosario_ws

action_msg/: CMakeLists.txt  package.xml
actividadR2_ROSario/: package.xml  setup.cfg  setup.py
autonomousDriving_ROSario/: package.xml  setup.cfg  setup.py
challenge2_ROSario/: setup.cfg  setup.py
close_loop_control_ROSario/: package.xml  setup.cfg  setup.py
close_loop_traffic_nav_ROSario/: package.xml  setup.cfg  setup.py
feedback_msg/: CMakeLists.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/feedback_msg/share/feedback_msg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/feedback_msg/share/feedback_msg/cmake/: ament_cmake_export_include_directories-extras.cmake  export_feedback_msg__rosidl_generator_cExport.cmake  export_feedback_msg__rosidl_generator_pyExport-noconfig.cmake  export_feedback_msg__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_feedback_msg__rosidl_typesupport_fastrtps_cExport.cmake  feedback_msg__rosidl_typesupport_cExport-noconfig.cmake  feedback_msg__rosidl_typesupport_cppExport-noconfig.cmake  feedback_msg__rosidl_typesupport_introspection_cExport.cmake  feedback_msg__rosidl_typesupport_introspection_cppExport-noconfig.cmake  feedback_msg__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/feedback_msg/share/feedback_msg/msg/: YoloResults.idl
line_follower_ROSario/: package.xml  setup.cfg  setup.py
log/: latest_build
open_cv_examples/: setup.cfg  (+1 more)
(+185 files in other folders)
